[build-system]
requires = ["setuptools>=60.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nextstep"
version = "0.0.1"
readme = "README.md"
dependencies = [
  "torchdiffeq",
  "numba",
  "pandas",
  "prettytable",
  "pytest",
  "megfile",
  "tensorboard",
  "attrdict",
  "wandb",
  "webdataset",
  "loguru",
  "pendulum",
  "joblib",
  "ipdb",
  "schedule",
  "Pygments",
  "argparse",
  "dataclasses",
  "colorama",
  "omegaconf",
  "debugpy",
  "tabulate",
  "black",
  "isort",
  "pytz",
  "regex",
  "pyinstrument",
  "viztracer",
  "scikit-image",
  "rpyc",
  "fire",
  "mediapy",
  "streamlit",
  "clip-benchmark",
  "openmim",
  "openai",
  "torch==2.5.1",
  "torchvision==0.20.1",
  "triton==3.1.0",
  "datasets==3.2.0",
  "dacite==1.9.2",
  "diffusers==0.32.2",
  "opencv-python-headless==4.11.0.86",
  "deepspeed==0.16.3",
  "transformers==4.49.0",
  "numpy==1.26.4",
  "hydra-core==1.3.2",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 128
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 128
